--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="sunspot_activity">SunSpoT</string>
+    <string name="app_name">SunSpot</string>
+    <string name="sunspot_activity">SunSpot</string>
 </resources>
